hphp/hack/test/ifc/check/shape_basic.php.exp
=== IFC analysis results for shape_basic.php
File "shape_basic.php", line 34, characters 3-18:
Data with policy `A` appears in context `PUBLIC`. (Typing[4379])
  File "shape_basic.php", line 9, characters 43-73:
  This may be the data source with policy `A`
  File "shape_basic.php", line 6, characters 43-75:
  This may be the data sink with policy `PUBLIC`
File "shape_basic.php", line 40, characters 3-16:
Data with policy `B` appears in context `A`. (Typing[4379])
  File "shape_basic.php", line 12, characters 43-73:
  This may be the data source with policy `B`
  File "shape_basic.php", line 9, characters 43-73:
  This may be the data sink with policy `A`
File "shape_basic.php", line 71, characters 3-17:
Data with policy `B` appears in context `A`. (Typing[4379])
  File "shape_basic.php", line 12, characters 43-73:
  This may be the data source with policy `B`
  File "shape_basic.php", line 47, characters 10-16:
  This may be the data sink with policy `A`
File "shape_basic.php", line 58, characters 3-19:
Data with policy `A` appears in context `PUBLIC`. (Typing[4379])
  File "shape_basic.php", line 9, characters 43-73:
  This may be the data source with policy `A`
  File "shape_basic.php", line 44, characters 10-18:
  This may be the data sink with policy `PUBLIC`
